# treehouse

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  backend.db  backend_prod.db  docker-compose.yaml  entrypoint_web.sh  pyproject.toml  railway.json  requirements.txt  web.Dockerfile
.claude/commands/: add-service.md  add-work.md  deploy-check.md  runserver.md
.claude/product/: roadmap.md  vision.md
.claude/skills/site-content/: SKILL.md
apps/portfolio/: admin.py  models.py
apps/portfolio/migrations/: 0001_initial.py  0002_auto_20190924_0912.py  0003_auto_20190924_1015.py  0004_auto_20190924_1233.py  0005_auto_20191005_1508.py  0006_workhistory_image_path.py  0007_auto_20191005_1510.py  0008_auto_20191005_1741.py  0009_auto_20191005_1751.py  0010_auto_20210221_0843.py  0011_auto_20210221_0846.py  0012_alter_service_id_alter_workhistory_id.py
apps/user/: models.py
apps/user/migrations/: 0001_initial.py  0002_rename_image_user_user_image_alter_user_id.py
apps/website/: admin.py  config.py  content.py  helpers.py  models.py  urls.py  views.py
apps/website/migrations/: 0001_initial.py  0002_auto_20180928_1615.py  0003_auto_20190913_0440.py  0004_auto_20190914_0912.py  0005_auto_20190924_0912.py  0006_auto_20190924_1015.py  0007_auto_20190924_1233.py  (+9 more)
assetgen/: README.md  __init__.py  client.py  generate.py
assetgen/manifests/: officer-portraits.json  service-heroes.json
conf/: asgi.py  settings.py  settings_prod.py  urls.py  wsgi.py
db_ops/: take_backup.sh
prod/: treehouse.nginx  treehouse_gunicorn.service  treehouse_uwsgi.service  uwsgi.ini
(+19 files in other folders)
