[tool.poetry]
name = "treehouse"
version = "0.1.0"
description = "\"Sk. Farhad's personal website\""
authors = ["Sk Farhad <sk.farhad.eee@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
django = ">=4.2.0,<4.3.0"
djangorestframework = "^3.15.2"
djangorestframework-simplejwt = "^5.3.1"
whitenoise = "^6.9.0"
gunicorn = "19.9.0"
gevent = "^23.0.0"
wagtail = "^7.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"